--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="row">
             <div class="col-md-6 col-sm-12">
                 <h1> YOU MATTER</h1>
-                <H3>We made this game because we all don't appreciate the amount of discrimination that is occuring in the world currently. So, we made this game to teach the youth about what people with different identities go through. Click on any of these three to read about real life life expiriences. They helped us invision the scenarios un the game. </H3>
+                <H3>We made this game because we all don't appreciate the amount of discrimination occuring all around the world. This game is meant to teach the youth about what people with different identities go through because the youth are our future. Click on any of these three images to read about real-life expiriences. Their experiences helped us evision the scenarios on the game. The scenario that will be displayed first will be based off Claire's experience </H3>
             </div>
         </div>
         <!-- /.row -->
