--- a/survey_gender.html
+++ b/survey_gender.html
@@ -38,6 +38,11 @@
     <img src="http://static.vectorcharacters.net/uploads/2013/02/Attractive_Girl_Vector_Character_Preview.jpg"></a>
     <a href="survey_age.html">
     <img src="genderneutral.jpg">
+        
+    <footer>
+        <p>Disclaimer: All information inputed will remain strictly confidential.</p>
+    </footer>
+
 
      
 
